<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string-array name="klaus_floor_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    
        <string-array name="buildings">
        <item>Klaus Advanced Computing Building</item>
    </string-array>

    <string name="app_name">Ecco</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="user">Username:</string>
    <string name="pass">Password:</string>
    <string name="send_request">Send Request</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="createUser">Create User</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_create_user">CreateUserActivity</string>
    <string name="Email">Email</string>
    <string name="Phone">Phone</string>
    <string name="emailhint">user@email.com</string>
    <string name="phonehint">123-456-7890</string>
    <string name="title_activity_friends">FriendsActivity</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_share_location">ShareLocationActivity</string>
    <string name="Building">Building</string>
    <string name="Floor">Floor</string>
    <string name="title_activity_decision">DecisionActivity</string>

</resources>
